# predicates

./: .clinerules  Cargo.toml  README.md
memory-bank/: projectbrief.md
pair-equality/: .clinerules  .gitignore  Cargo.toml  README.md
pair-equality/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pair-equality/scripts/: test-wasm.sh
pair-equality/src/: lib.rs
pair-equality/tests/: pair_equality_test.rs
