[package]
name = "pair-equality"
version = "0.1.0"
edition = "2021"
description = "A predicate alkane that enforces quantities of alkanes sent to it in a two-party trade"
authors = ["flex"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support.workspace = true
alkanes-runtime.workspace = true
metashrew-support.workspace = true
protorune-support.workspace = true
ordinals.workspace = true
anyhow.workspace = true
bitcoin.workspace = true

[dev-dependencies]
once_cell.workspace = true
wasm-bindgen-test.workspace = true
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }

[features]
default = []
test = []

[[test]]
name = "pair_equality_test"
path = "tests/pair_equality_test.rs"